--- a/docs/views/sandbox.html
+++ b/docs/views/sandbox.html
@@ -247,4 +247,11 @@
             </div>
         </div>
     </div>
+    <div class="row-12 text-middle bg-dark theme-light pad-large">
+        <div>
+            <h1 class="double strong uppercase">DEGORDIAN<br>ACADEMY</h1>
+            <hr class="small" style="border-color:#fff">
+            <p class="lead type-serif">Lectures on digital marketing by Degordian's experts, currently on hold untill autumn.</p>
+        </div>
+    </div>
 </section>
