--- a/docs/views/themes.html
+++ b/docs/views/themes.html
@@ -3,4 +3,5 @@
     <h2 class="subheading">Subheading</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, repudiandae, <a href="#">necessitatibus</a>, quod illum corporis recusandae dignissimos reprehenderit ut asperiores obcaecati qui ipsam? Dolore, nihil possimus animi voluptas provident officiis libero.</p>
     <p class="subtext">Secondary text.</p>
+    <hr class="thick">
 </div>
