--- a/docs/views/sandbox.html
+++ b/docs/views/sandbox.html
@@ -250,7 +250,7 @@
     <div class="row-12 text-middle bg-dark theme-light pad-large">
         <div>
             <h1 class="double strong uppercase">DEGORDIAN<br>ACADEMY</h1>
-            <hr class="small" style="border-color:#fff">
+            <hr class="small thick light">
             <p class="lead type-serif">Lectures on digital marketing by Degordian's experts, currently on hold untill autumn.</p>
         </div>
     </div>
