Adding %drawer* component Renamed .is-3d to .animation-3d Cleaned up animation mixins and added settings

--- a/docs/views/sandbox.html
+++ b/docs/views/sandbox.html
@@ -238,7 +238,7 @@
     </div>
 </section>
 <section class="col-12">
-    <div class="row-12 cols-4 rows-6 cols-bordered">
+    <div class="row-12 cols-4 rows-6 cols-bordered hide">
         <div class="border-dark text-middle pad-large hover-bg-dark hover-theme-light" ng-repeat="n in component.range(8)">
             <div>
                 <span class="subtext"><em>June 3rd, 2014</em></span>
@@ -247,11 +247,17 @@
             </div>
         </div>
     </div>
-    <div class="row-12 text-middle bg-dark theme-light pad-large">
+
+    <div class="row-12 text-middle bg-dark theme-light pad-large hide">
         <div>
             <h1 class="double strong uppercase">DEGORDIAN<br>ACADEMY</h1>
             <hr class="small thick light">
             <p class="lead type-serif">Lectures on digital marketing by Degordian's experts, currently on hold untill autumn.</p>
         </div>
+    </div>
+
+    <div class="row-12">
+        <div class="foo bg-dark drawer-top-6" style="z-index:-1"></div>
+        <div class="col-12 pad transition bg-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores consequatur itaque laudantium, natus delectus quis quas enim voluptatem id aut sed est officiis dolorum modi veniam praesentium, omnis cumque corporis.</div>
     </div>
 </section>
