--- a/scss/modules/animations/_module.scss
+++ b/scss/modules/animations/_module.scss
@@ -4,10 +4,16 @@
 
 // Animation Settings
 $animation-duration: 300ms !default;
-$animation-duration-3d: 300ms !default;
+$animation-direction: normal !default;
+$animation-delay: 0 !default;
+$animation-iteration-count: 1 !default;
+$animation-play-state: running !default;
+$animation-fill-mode: both !default;
 $animation-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1) !default;
-$animation-perspective: 1000 !default;
 $animation-delta: 5rem !default;
+
+$animation-3d-duration: 300ms !default;
+$animation-3d-perspective: 1000 !default;
 
 // Activation Settings
 $activation-item-selector: '[ui-view], > .page, > [ng-if]' !default;
@@ -21,9 +27,9 @@ $active-delay: $animation-duration !default;
 // Transition Settings
 $transition-property: all !default;
 $transition-selector: '.active' !default;
-$transition-duration: 300ms !default;
-$transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1) !default; // easeInOutCubic
-$transition-delay: 0 !default;
+$transition-duration: $animation-duration !default;
+$transition-timing-function: $animation-timing-function !default; // easeInOutCubic
+$transition-delay: $animation-delay !default;
 
 $transition-delta-opacity: 0.3 !default;
 
