--- a/scss/modules/layers/_classes.scss
+++ b/scss/modules/layers/_classes.scss
@@ -21,6 +21,20 @@
 
 #{prefixed-class('card')} { @extend %card; }
 
-@for $i from 0 through $grid-rows {
+@for $i from 1 through $grid-rows {
     .card-#{$i} { @extend %card-#{$i}; }
+}
+
+#{prefixed-class('drawer')} { @extend %drawer; }
+#{prefixed-class('drawer-left')} { @extend %drawer-left; }
+#{prefixed-class('drawer-right')} { @extend %drawer-right; }
+#{prefixed-class('drawer-top')} { @extend %drawer-top; }
+#{prefixed-class('drawer-bottom')} { @extend %drawer-bottom; }
+
+@for $i from 1 through $grid-columns {
+    @each $drawer-position in (left, right, top, bottom) {    
+        .drawer-#{$drawer-position}-#{$i} {
+            @extend %drawer-#{$drawer-position}-#{$i};
+        }
+    }
 }
