--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -8,6 +8,7 @@
 @import "compass/css3/transition";
 @import "compass/css3/transform";
 @import "compass/css3/flexbox";
+@import "compass/css3/animation";
 
 // Units
 $x: 16px !default;
